<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/fiftyDp"
        android:text="@string/enterSearchProduct"
        android:textColor="@color/orange"
        android:textSize="@dimen/twentyFourSp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:hint="Enter search item"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirtyDp"
        android:layout_marginEnd="@dimen/fiftyDp"
        android:layout_marginBottom="@dimen/tenDp"
        android:text="@string/search"
        android:textColor="@color/orange"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirtyDp"
        android:layout_marginEnd="@dimen/fiftyDp"
        android:layout_marginBottom="@dimen/tenDp"
        android:text="@string/close"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvOk"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField" />


</androidx.constraintlayout.widget.ConstraintLayout>