<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.SneakerDetailsPageFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/fourtyDp"
        android:layout_height="@dimen/fourtyDp"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/fiftyDp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDress"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="@dimen/fiveDp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/ivSneakerBG"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zeroDP"
        android:src="@drawable/bottom_curve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDress" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBrand"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDress" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/fiveDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBrand" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:text="Size (uk) :"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSizeSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:background="@drawable/background_edit_text"
        android:text="@string/seven"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvSize"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSizeEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tenDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:background="@drawable/background_edit_text"
        android:focusable="true"
        android:text="@string/eight"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvSizeSeven"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSizeNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tenDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:background="@drawable/background_edit_text"
        android:text="@string/nine"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvSizeEight"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:text="@string/colour"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivOrangeCOlor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivOrangeCOlor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivOrangeCOlor"
        android:layout_width="60dp"
        android:layout_height="@dimen/thirtyDp"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:background="@drawable/orange_colour_bg"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvSize"
        app:layout_constraintTop_toBottomOf="@+id/tvSizeSeven" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivPurpleCOlor"
        android:layout_width="60dp"
        android:layout_height="@dimen/thirtyDp"
        android:layout_marginStart="@dimen/tenDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:background="@drawable/purple_colour_bg"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivOrangeCOlor"
        app:layout_constraintTop_toBottomOf="@+id/tvSizeSeven" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivBlueCOlor"
        android:layout_width="60dp"
        android:layout_height="@dimen/thirtyDp"
        android:layout_marginStart="@dimen/tenDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginEnd="@dimen/thirtyDp"
        android:background="@drawable/blue_colour_bg"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivPurpleCOlor"
        app:layout_constraintTop_toBottomOf="@+id/tvSizeSeven" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/price"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAddToCart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAddToCart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPriceVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fiveDp"
        android:text="$129"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toTopOf="@id/tvPrice" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddToCart"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/thirtyDp"
        android:layout_marginTop="@dimen/thirtyDp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/orange_bg"
        android:gravity="center"
        android:text="@string/addToCart"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPurpleCOlor" />


    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/bottom_curve"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/fiftyDp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="@dimen/fourtyDp"
        android:layout_height="@dimen/fourtyDp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:src="@drawable/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/ivCheckOut"
        android:layout_width="@dimen/fourtyDp"
        android:layout_height="@dimen/fourtyDp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/fiftyDp"
        android:layout_marginBottom="@dimen/twentyDp"
        android:src="@drawable/cart_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>